# my_reservation

./: README.md
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  lib.rs
abi/src/error/: mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/2023-10-26/: init.up.sql  reservation.up.sql
reservation/: Cargo.toml
reservation/src/: lib.rs  manager.rs
reservation/src/sqlx_tester/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
rfcs/: 0001-core-reservation.md  template.md
service/fixtures/: config.yml
