[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.6.2", features = [
	"postgres",
	"runtime-tokio-rustls",
	"chrono",
	"uuid",
] }
abi = { version = "0.1.0", path = "../abi" } # 导入本地 abi 库
async-trait = "0.1.74"
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
sqlx-db-tester = "0.1.1"
prost-types = "0.12.3"
tokio = { version = "1.33.0", features = ["full"] }
